test/fixtures/valid/test-header-element.fez
<script>
  init() {
    this.state.visible = true
  }
</script>

<style>
  header {
    display: block;
  }
</style>

<header class="{state.visible ? 'visible' : ''}">
  <nav>
    <a href="/">Home</a>
  </nav>
</header>

<div>Body</div>
