test/fixtures/invalid/test-template-compiler-expression.fez
<script>
  class {
    init() {
      this.state.value = 'bad'
    }
  }
</script>

<div>{state.value(}</div>
